--- a/index.html
+++ b/index.html
@@ -9,23 +9,11 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <div class="app-wrap">
-            <header>
-                <input type="text" autocomplete="off" class="search-box" placeholder="Search for a city..." />
-            </header>
-            <main>
-                <section class="location">
-                    <div class="city">Northampton, GB</div>
-                    <div class="date">Thursday 10 January 2020</div>
-                </section>
-                <div class="current">
-                    <div class="temp">15<span>℃</span></div>
-                    <div class="weather">Sunny</div>
-                    <div class="hi-low">13℃ / 16℃</div>
-                </div>
-            </main>
-        </div>
-        
+      <form id="form">
+          <input type="text" autocomplete="off" placeholder="Enter city" id="search" />
+      </form>
+      <main id="main"></main>
+                
         <script src="main.js"></script>
     </body>
 </html>
