--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       </form>
       <main id="main"></main>
                 
-        <script src="main.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
